<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimen_40dp"
    android:paddingRight="@dimen/dimen_40dp"
    tools:context=".Login.LoginActivity">

    <EditText
        android:id="@+id/user_name_textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/app_name"
        android:inputType="text"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password_textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_textBox"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:visibility="visible" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:text="@string/login_text"
        android:visibility="visible" />

</RelativeLayout>